qr scanner added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="default_notification_channel_id">esurio-esuriit</string>
     <string name="msg_token_fmt">fcm token received %1$s</string>
+    <string name="title_activity_barcode">BarcodeActivity</string>
 </resources>
